[package]
name = "rustypycraw-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rustypycrawcore"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.8"
walkdir = "2"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
